Setting up Devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
   <%= render 'layouts/nav' %>
+  
   <div class="container">
+    <%= bootstrap_flash %>
     <%= yield %>
   </div>
   <%= render 'layouts/foot' %>
