--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,30 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Modifica Profilo <%= resource_name.to_s.humanize %> <%= current_user.username %></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :username, required: true, autofocus: true %>
+    <%= f.input :firstname, :label => "Nome", required: true %>
+    <%= f.input :lastname, :label => "Cognome", required: true %>
+    <%= f.input :email, required: true, autofocus: false %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <%= f.input :password, autocomplete: "off", hint: "lasciala vuota per non cambiare la password!", required: false %>
+    <%= f.input :password_confirmation, :label => "Conferma Password", required: false %>
+    <%= f.input :current_password, :label => "Password corrente", hint: "inserisci la password corrente per confermare le modifiche", required: true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Salva" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Cancella il mio account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Insoddisfatto? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
