--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Sign up</h2>
+<h2>Registrazione</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
-
+  
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+    <%= f.input :username, required: true, autofocus: true %>
+    <%= f.input :firstname, :label => "Nome", required: true %>
+    <%= f.input :lastname, :label => "Cognome", required: true %>
+    <%= f.input :email, required: true, autofocus: false %>
+    <%= f.input :password, required: true, hint: ("Devi inserire almeno #{@minimum_password_length} caratteri." if @minimum_password_length) %>
+    <%= f.input :password_confirmation, :label => "Conferma Password", required: true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Registrati!" %>
   </div>
 <% end %>
 
