--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,8 +15,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         
-        <li><%= link_to "Contact Me",       pages_contact_path %></li>
-        <li><%= link_to "About",            pages_about_path %></li>
+        <li><%= link_to "Contattami",       pages_contact_path %></li>
+        <li><%= link_to "About Me",            pages_about_path %></li>
+        <li><%= link_to "Inserisci un Articolo", new_article_path %></li>
         <li><%= link_to "Sign Up",          new_user_registration_path if !current_user %></li>
         <li><%= link_to "Sign In",          new_user_session_path if !current_user %></li>
         <% if current_user %>
