--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -122,6 +122,7 @@
     <div class="well">
       <h4>Articoli Recenti</h4>
       <% @articles.each do |a|  %>
+      Creato da: <%= a.user.username %> <br />
       <strong><%= link_to a.title, a %></strong>
       <p><%= truncate(a.body) %></p>
       <% end %>
