--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,8 +5,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Body</th>
+      <th>Autore</th>
+      <th>Titolo</th>
+      <th>Testo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr>
+        <td><%= article.user.username %></td>
         <td><%= article.title %></td>
         <td><%= article.body %></td>
         <td><%= link_to 'Visualizza', article %></td>
