--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,23 +1,57 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Creato da:</strong>
-  <%= @article.user.username %>
-  <strong>In Data:</strong>
-  <%= @article.created_at.strftime("%d-%m-%Y %H:%M") %>
-</p>
+<div class="row">
 
-<p>
-  <strong>Titolo:</strong>
-  <%= @article.title %>
-</p>
+  <!-- Blog Post Content Column -->
+   <div class="col-lg-8">
+    <!-- Blog Post -->
+    <!-- Title -->
+    <h1 style="font-size: 62.5px;">
+      <%= @article.title %>
+    </h1>
+    <!-- Author -->
+    <p class="lead">
+      Autore: <%= @article.user.username %>
+    </p>
+    <!-- Date/Time -->
+    <p><span class="glyphicon glyphicon-time"></span> Creato:
+      <%= @article.created_at.strftime("%d-%m-%Y %H:%M") %>
+    </p>
+    <!-- Preview Image -->
 
-<p>
-  <strong>Testi:</strong>
-  <%= @article.body %>
-</p>
 
-<%= render 'comments/form' %>
+    <!-- Post Content -->
+    <%= @article.body %>
+    <hr>
+    <!-- Blog Comments -->
+
+    <!-- Comments Form -->
+
+    <%= render 'comments/form' %>
+    <div class="well">
+
+      <h4>blah blah</h4>
+    </div>
+    <hr>
+    <!-- Posted Comments -->
+    <!-- Comment -->
+  </div>
+  <!-- Blog Sidebar Widgets Column -->
+  <div class="col-md-4">
+    <!-- Blog Search Well -->
+
+    <!-- Blog Categories Well -->
+
+    <!-- Side Widget Well -->
+    <div class="well">
+      <h4>Recent Posts</h4>
+    </div>
+  </div>
+  
+  
+</div>
 
 <%= link_to 'Modifica', edit_article_path(@article) %> |
 <%= link_to 'Torna indietro', articles_path %>
+
+
+  
